interpreter/examples/bad/interpreter/non_rvalue.dl
{
    function f(ref x) {
        x = x + 1
    },
    int y.

    y = f(1)
}
